組織A1/組織A1/metadata/objects/deploymeta__c.object
<CustomObject>
    <fields>
        <fullName>deploymetaA__c</fullName>
        <label>部署元A</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaB__c</fullName>
        <label>部署元B</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaC__c</fullName>
        <label>部署元C</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaD__c</fullName>
        <label>部署元D</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaE__c</fullName>
        <label>部署元E</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaF__c</fullName>
        <label>部署元F</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaG__c</fullName>
        <label>部署元G</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaH__c</fullName>
        <label>部署元H</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaI__c</fullName>
        <label>部署元I</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaJ__c</fullName>
        <label>部署元J</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaK__c</fullName>
        <label>部署元K</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deploymetaL__c</fullName>
        <label>部署元L</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>部署元</label>
    <nameField>
        <label>deploymeta名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>